--- a/docker/Dockerfile.ascend.develop.openeuler2
+++ b/docker/Dockerfile.ascend.develop.openeuler2
@@ -71,10 +71,7 @@ RUN if [ "$(arch)" = "aarch64" ];then node_arch="arm64";else node_arch="x64";fi 
     if [ "$(arch)" = "aarch64" ];then npm config set registry https://registry.npm.taobao.org/;fi && \
     npm install -g npm@latest && npm -v && node -v && \
     npm install -g @angular/cli && \
-    npm cache clean --force && rm -rf /root/* && \
-    python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
-    usermod -G HwHiAiUser modelbox
+    npm cache clean --force && rm -rf /root/*
 
 RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
