--- a/docker/Dockerfile.ascend.develop.ubuntu-u2
+++ b/docker/Dockerfile.ascend.develop.ubuntu-u2
@@ -1,5 +1,5 @@
-FROM modelbox/ascend-base-openeuler:latest
-FROM openeuler/openeuler:20.03-lts-sp3
+FROM modelbox/ascend-base-ubuntu:latest
+FROM ubuntu:20.04
 
 COPY release /opt/release
 COPY --from=0 /usr/local/Ascend_dev /usr/local/Ascend
@@ -13,7 +13,7 @@ ENV ASCEND_AICPU_PATH=${ASCEND_PATH}/ascend-toolkit/latest
 ENV ASCEND_OPP_PATH=${ASCEND_PATH}/ascend-toolkit/latest/opp
 ENV TOOLCHAIN_HOME=${ASCEND_PATH}/ascend-toolkit/latest/toolkit
 ENV TBE_IMPL_PATH=${ASCEND_PATH}/ascend-toolkit/latest/opp/op_impl/build-in/ai_core/tbe
-ENV MINDSPORE_PATH=/usr/local/lib/python3.7/site-packages/mindspore
+ENV MINDSPORE_PATH=/usr/local/lib/python3.7/dist-packages/mindspore
 ENV DDK_PATH=${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib
 ENV DRIVER_PATH=${ASCEND_PATH}/driver
 
@@ -35,16 +35,19 @@ ENV LD_LIBRARY_PATH=${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64${LD_LIB
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck \
-        vim gcc gcc-c++ make cmake libnsl perf doxygen gcc-gfortran pciutils alsa-lib gdb clang gtk3-devel \
-        zlib-devel curl-devel bzip2-devel rpm-build sqlite-devel libffi-devel openssl-devel xz-devel git passwd systemd \
-        krb5-devel expat-devel boost-devel ncurses-devel libxml2-devel libssh2-devel python3-devel python3-perf bc nc \
-        readline-devel nss-devel fuse-devel gdbm-devel glibc-devel glibc-debuginfo gnutls-devel net-tools libatomic \
-        xauth tk-devel lapack-devel graphviz-devel mesa-libGL-devel openblas-devel protobuf-c-devel openssh-server && \
-    ln -sf pip3.7 /usr/bin/pip && ln -sf python3.7 /usr/bin/python && \
+    if [ "$(arch)" = "aarch64" ];then sed -i 's@ports.ubuntu.com@mirrors.ustc.edu.cn@g' /etc/apt/sources.list;fi && \
+    rm -rf /var/lib/dpkg/info/* && \
+    apt update && apt upgrade -y && \
+    apt install -y python3-dev python3-pip python3-apt python3-setuptools apt-utils && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
+        build-essential unzip ffmpeg sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server \
+        pkg-config kmod net-tools pciutils libssl-dev libcpprest-dev libswscale-dev libavformat-dev \
+        graphviz libgraphviz-dev libfuse-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev \
+        libopenblas-dev netcat clang clang-tidy-10 && \
+    ln -sf clang-tidy-10 /usr/bin/clang-tidy && ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
     ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
-    dnf clean all && rm -rf /var/cache/dnf/*
+    rm -rf /var/lib/apt/lists/* /root/*
 
 RUN mkdir -p /root/.pip && \
     echo "[global]" > /root/.pip/pip.conf && \
@@ -55,13 +58,12 @@ RUN mkdir -p /root/.pip && \
     groupadd HwHiAiUser && \
     useradd -g HwHiAiUser -d /home/HwHiAiUser -m HwHiAiUser && \
     python3 -m pip install --upgrade pip && \
-    python3 -m pip install --no-cache-dir wheel psutil numpy attrs decorator protobuf scipy sympy cffi grpcio grpcio-tools requests pillow pyyaml opencv-python==4.5.5.64 && \
+    python3 -m pip install --no-cache-dir wheel psutil numpy attrs psutil decorator protobuf scipy sympy cffi grpcio grpcio-tools requests pillow pyyaml opencv-contrib-python==4.5.5.64 && \
     python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.6.1/MindSpore/ascend/$(arch)/mindspore_ascend-1.6.1-cp37-cp37m-linux_$(arch).whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/topi-0.4.0-py3-none-any.whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/te-0.4.0-py3-none-any.whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/hccl-0.1.0-py3-none-any.whl && \
-    echo "/usr/local/lib" >>/etc/ld.so.conf && \
-    echo "/usr/local/lib64" >>/etc/ld.so.conf && \
+    echo "/usr/local/lib" >>  /etc/ld.so.conf && \
     echo "${ASCEND_PATH}/driver/lib64" >>/etc/ld.so.conf && \
     echo "${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64" >>/etc/ld.so.conf
 
@@ -71,10 +73,7 @@ RUN if [ "$(arch)" = "aarch64" ];then node_arch="arm64";else node_arch="x64";fi 
     if [ "$(arch)" = "aarch64" ];then npm config set registry https://registry.npm.taobao.org/;fi && \
     npm install -g npm@latest && npm -v && node -v && \
     npm install -g @angular/cli && \
-    npm cache clean --force && rm -rf /root/* && \
-    python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
-    usermod -G HwHiAiUser modelbox
+    npm cache clean --force && rm -rf /root/*
 
 RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
@@ -85,12 +84,13 @@ RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
+    sed -i "32aPermitRootLogin yes" /etc/ssh/sshd_config && \
     sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo 'export TMOUT=0' >> /etc/bashrc && \
-    echo 'export HISTSIZE=1000' >> /etc/bashrc && \
-    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bashrc && \
-    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> /etc/bashrc && \
-    ldconfig -v 2>/dev/null|grep "libascend_hal.so" && systemctl enable sshd
+    echo 'export TMOUT=0' >> ~/.bashrc && \
+    echo 'export HISTSIZE=1000' >> ~/.bashrc && \
+    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
+    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> ~/.bashrc && \
+    ldconfig -v 2>/dev/null|grep "libascend_hal.so" && systemctl enable ssh
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
