--- a/docker/Dockerfile.ascend.runtime.ubuntu-u2
+++ b/docker/Dockerfile.ascend.runtime.ubuntu-u2
@@ -1,5 +1,5 @@
 FROM modelbox/ascend-base-ubuntu:latest
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 COPY release /opt/release
 COPY --from=0 /usr/local/Ascend_run /usr/local/Ascend
@@ -24,13 +24,10 @@ RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shang
     rm -rf /var/lib/dpkg/info/* && \
     apt update && apt upgrade -y && \
     apt install -y python3.7-dev python3-pip python3-apt python3-setuptools && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
     apt install -y gcc dbus systemd systemd-cron iproute2 gnupg2 libfuse2 libgtk-3-0 \
-        build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape202 \
-        libssl1.1 libcpprest libswscale4 libavformat57 graphviz libprotobuf-c1 libopenblas-base && \
-    rm -f /usr/bin/python3 /usr/bin/python && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python3.7 100 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 100 && \
-    update-alternatives --config python3 && \
+        build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape205 \
+        libssl1.1 libcpprest graphviz libprotobuf-c1 libopenblas-base && \
     rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /root/.pip && \
@@ -52,10 +49,7 @@ RUN mkdir -p /root/.pip && \
     echo "/usr/local/lib" >>/etc/ld.so.conf && \
     find /usr/local -name "*.a"|xargs rm -f
 
-RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    dpkg -i /opt/release/*.deb && \
-    usermod -G HwHiAiUser modelbox && \
-    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
