--- a/docker/Dockerfile.cuda.develop.ubuntu-u2
+++ b/docker/Dockerfile.cuda.develop.ubuntu-u2
@@ -1,9 +1,7 @@
-ARG BASE_IMAGE=openeuler/openeuler:20.03-lts-sp3
+ARG BASE_IMAGE=ubuntu:20.04
 FROM ${BASE_IMAGE} as base
 
 COPY release /opt/release
-COPY docker/repo/*.repo /etc/yum.repos.d/
-
 ADD *.tar.gz /usr/local/
 
 ARG CUDA_VER
@@ -17,15 +15,17 @@ ARG NVIDIA_REQUIRE_CUDA
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck \
-        vim gcc gcc-c++ make cmake libnsl python3-perf doxygen pciutils gdb net-tools zlib-devel gnutls-devel nc gtk3-devel \
-        rpm-build gcc-gfortran alsa-lib nss-devel fuse-devel gdbm-devel krb5-devel expat-devel curl-devel bzip2-devel bc \
-        boost-devel ncurses-devel libxml2-devel libssh2-devel openssh-server python3-devel glibc-debuginfo libatomic systemd \
-        git clang xauth graphviz-devel sqlite-devel openssl-devel readline-devel mesa-libGL-devel protobuf-c-devel passwd && \
-    ln -sf pip3.7 /usr/bin/pip && ln -sf python3.7 /usr/bin/python && \
+    apt update && apt upgrade -y && \
+    apt install -y python3-dev python3-pip python3-apt python3-setuptools && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
+        build-essential unzip ffmpeg sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server \
+        pkg-config kmod net-tools pciutils libgtk-3-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev \
+        libssl-dev libcpprest-dev libswscale-dev libavformat-dev graphviz libgraphviz-dev libfuse-dev \
+        netcat clang clang-tidy-10 && \
+    ln -sf clang-tidy-10 /usr/bin/clang-tidy && ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
     ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
-    dnf clean all && rm -rf /var/cache/dnf/*
+    rm -rf /var/lib/apt/lists/* /root/*
 
 RUN mkdir -p /root/.pip && \
     echo "[global]" > /root/.pip/pip.conf && \
@@ -33,30 +33,33 @@ RUN mkdir -p /root/.pip && \
     echo "trusted-host = pypi.python.org" >>/root/.pip/pip.conf && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
     python3 -m pip install --upgrade pip && \
-    python3 -m pip install --no-cache-dir psutil wheel numpy pyyaml requests pillow opencv-python==4.5.5.64 && \
-    NVIDIA_GPGKEY_SUM=d1be581509378368edeec8c1eb2958702feedf3bc3d17011adbf24efacce4ab5 && \
-    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/7fa2af80.pub | sed '/^Version/d' > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
-    echo "$NVIDIA_GPGKEY_SUM  /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA" | sha256sum -c --strict - && \
-    dnf install -y --nogpgcheck --setopt=obsoletes=0 \
-        cuda-cudart-${CUDA_VER}-${CUDA_CUDART_VERSION} \
+    python3 -m pip install --no-cache-dir psutil wheel numpy pyyaml requests pillow opencv-contrib-python==4.5.5.64 && \
+    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub | apt-key add - && \
+    curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub | apt-key add - && \
+    echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
+    echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
+    apt update && \
+    apt install -y --no-install-recommends \
+        cuda-cudart-${CUDA_VER}=${CUDA_CUDART_VERSION} \
         cuda-minimal-build-${CUDA_VER} \
-        cuda-libraries-$([ "${CUDA_VERSION}" = "11.2" ] && echo "devel" || echo "dev")-${CUDA_VER} \
+        cuda-libraries-dev-${CUDA_VER} \
         cuda-command-line-tools-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
     curl https://nodejs.org/dist/v16.13.2/node-v16.13.2-linux-x64.tar.xz|tar -xJ && \
-    cp -af node-v16.13.2-linux-x64/{bin,include,lib,share} /usr/local/ && \
+    cp -af node-v16.13.2-linux-x64/* /usr/local/ && \
     npm install -g npm@latest && npm -v && node -v && \
     npm install -g @angular/cli && \
     npm cache clean --force && \
-    dnf clean all && rm -rf /var/cache/dnf/* /root/*
-    
-RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
-        dnn_ver="8.0.0.180-1.cuda10.2"; \
+    rm -rf /var/lib/apt/lists/* /root/*
+
+RUN apt update && \
+    if [ "${CUDA_VERSION}" = "10.2" ]; then \
+        dnn_ver="8=8.0.0.180-1+cuda10.2"; \
     elif [ "${CUDA_VERSION}" = "11.2" ]; then \
-        dnn_ver="8.4.1.50-1.cuda11.6";fi && \
-    dnf install -y --nogpgcheck --setopt=obsoletes=0 \
-        libcudnn8-${dnn_ver} \
-        libcudnn8-devel-${dnn_ver} && \
+        dnn_ver="8=8.4.1.50-1+cuda11.6";fi && \
+    apt install -y --no-install-recommends \
+        libcudnn${dnn_ver} \
+        libcudnn${dnn_ver%=*}-dev=${dnn_ver#*=} && \
     if [ -n "${TF_VERSION}" ]; then \
         curl -LO https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
         tar zxf libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz -C /usr/local/ && \
@@ -64,21 +67,25 @@ RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
     elif [ -n "${TORCH_VERSION}" ]; then \
         curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
         unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
-        cp -af libtorch/{include,lib,share} /usr/local/; \
+        cp -af libtorch/* /usr/local/; \
     elif [ -n "${TRT_VERSION}" ]; then \
         if [ "${TRT_VERSION}" = "7.1.3.4" ]; then \
-            trt_ver="7.1.3-1.cuda10.2" ; \
+            trt_ver="7=7.1.3-1+cuda10.2"; \
         elif [ "${TRT_VERSION}" = "8.4.2.4" ]; then \
-            trt_ver="8.4.2-1.cuda11.6";fi && \
-        dnf install -y --nogpgcheck --setopt=obsoletes=0 \
-            libnvinfer-devel-${trt_ver} \
-            libnvonnxparsers-devel-${trt_ver} \
-            libnvparsers-devel-${trt_ver} \
-            libnvinfer-plugin-devel-${trt_ver};fi && \
-    dnf clean all && rm -rf /var/cache/dnf/* /root/*
+            trt_ver="8=8.4.2-1+cuda11.6";fi && \
+        apt install -y --no-install-recommends \
+            libnvinfer${trt_ver} \
+            libnvinfer-dev=${trt_ver#*=} \
+            libnvparsers${trt_ver} \
+            libnvparsers-dev=${trt_ver#*=} \
+            libnvonnxparsers${trt_ver} \
+            libnvonnxparsers-dev=${trt_ver#*=} \
+            libnvinfer-plugin${trt_ver} \
+            libnvinfer-plugin-dev=${trt_ver#*=};fi && \
+    rm -rf /var/lib/apt/lists/* /root/*
 
 RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
+    dpkg -i /opt/release/*.deb && \
     (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
@@ -89,16 +96,14 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
     sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo "/usr/local/lib" >>/etc/ld.so.conf && \
-    echo "/usr/local/lib64" >>/etc/ld.so.conf && \
     echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
     echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf && \
-    sed -i '/TMOUT/s/300/0/g' /etc/bashrc && \
-    echo 'HISTSIZE=1000' >> /etc/bashrc && \
-    echo "export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig" > /etc/profile.d/pkgconfig.sh && \
-    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bashrc && \
-    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> /etc/bashrc && \
-    ldconfig -v 2>/dev/null && systemctl enable sshd
+    sed -i "32aPermitRootLogin yes" /etc/ssh/sshd_config && \
+    echo 'export TMOUT=0' >> ~/.bashrc && \
+    echo 'export HISTSIZE=1000' >> ~/.bashrc && \
+    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
+    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> ~/.bashrc && \
+    ldconfig -v 2>/dev/null && systemctl enable ssh
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
@@ -111,4 +116,4 @@ ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES video,compute,utility
 ENV NVIDIA_REQUIRE_CUDA "${NVIDIA_REQUIRE_CUDA}"
 
-CMD ["/usr/sbin/init", "--log-target=journal"]
+CMD ["/sbin/init", "--log-target=journal"]
