--- a/docker/Dockerfile.cuda.runtime.ubuntu
+++ b/docker/Dockerfile.cuda.runtime.ubuntu
@@ -16,7 +16,7 @@ WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
     apt update && apt upgrade -y && \
-    apt install  -y python3.7-dev python3-pip python3-apt python3-setuptools && \
+    apt install  -y python3-pip python3-apt python3-setuptools && \
     apt install  -y dbus systemd systemd-cron iproute2 gnupg2 libfuse2 \
         build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape202 \
         libssl1.1 libcpprest libswscale4 libavformat57 graphviz libprotobuf-c1 libgtk-3-0 && \
@@ -32,7 +32,7 @@ RUN mkdir -p /root/.pip && \
     echo "trusted-host = pypi.python.org" >>/root/.pip/pip.conf && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
     python3 -m pip install --upgrade pip && \
-    python3 -m pip install --no-cache-dir wheel numpy pyyaml requests opencv-contrib-python pillow && \
+    python3 -m pip install --no-cache-dir psutil wheel numpy pyyaml requests pillow opencv-contrib-python==4.5.5.64 && \
     curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub | apt-key add - && \
     curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub | apt-key add - && \
     echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
