--- a/docker/Dockerfile.cuda.runtime.ubuntu-u2
+++ b/docker/Dockerfile.cuda.runtime.ubuntu-u2
@@ -1,9 +1,7 @@
-ARG BASE_IMAGE=openeuler/openeuler:20.03-lts-sp3
+ARG BASE_IMAGE=ubuntu:20.04
 FROM ${BASE_IMAGE} as base
 
 COPY release /opt/release
-COPY docker/repo/*.repo /etc/yum.repos.d/
-
 ADD *.tar.gz /usr/local/
 
 ARG CUDA_VER
@@ -17,11 +15,13 @@ ARG NVIDIA_REQUIRE_CUDA
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck curl boost libnsl libssh2 libatomic mesa-libGL graphviz protobuf-c \
-        systemd fuse libxml2 openssl bc && \
-    ln -sf pip3.7 /usr/bin/pip && ln -sf python3.7 /usr/bin/python && \
-    dnf clean all && rm -rf /var/cache/dnf/*
+    apt update && apt upgrade -y && \
+    apt install  -y python3-pip python3-apt python3-setuptools && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt install  -y dbus systemd systemd-cron iproute2 gnupg2 libfuse2 \
+        build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape205 \
+        libssl1.1 libcpprest graphviz libprotobuf-c1 libgtk-3-0 && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /root/.pip && \
     echo "[global]" > /root/.pip/pip.conf && \
@@ -29,34 +29,36 @@ RUN mkdir -p /root/.pip && \
     echo "trusted-host = pypi.python.org" >>/root/.pip/pip.conf && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
     python3 -m pip install --upgrade pip && \
-    python3 -m pip install --no-cache-dir psutil wheel numpy pyyaml requests pillow opencv-python==4.5.5.64 && \
-    NVIDIA_GPGKEY_SUM=d1be581509378368edeec8c1eb2958702feedf3bc3d17011adbf24efacce4ab5 && \
-    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/7fa2af80.pub | sed '/^Version/d' > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
-    echo "$NVIDIA_GPGKEY_SUM  /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA" | sha256sum -c --strict - && \
-    dnf install -y --nogpgcheck --setopt=obsoletes=0 \
+    python3 -m pip install --no-cache-dir psutil wheel numpy pyyaml requests pillow opencv-contrib-python==4.5.5.64 && \
+    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub | apt-key add - && \
+    curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub | apt-key add - && \
+    echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
+    echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
+    apt update && \
+    apt install -y --no-install-recommends \
         cuda-nvtx-${CUDA_VER} \
         cuda-libraries-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
     find /usr/local -name "*.a"|xargs rm -f && \
-    dnf clean all && rm -rf /var/cache/dnf/* /root/*
+    rm -rf /var/lib/apt/lists/* /root/*
 
-RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
-        dnn_ver="8.0.0.180-1.cuda10.2"; \
+RUN apt update && \
+    if [ "${CUDA_VERSION}" = "10.2" ]; then \
+        dnn_ver="8.0.0.180-1+cuda10.2"; \
     elif [ "${CUDA_VERSION}" = "11.2" ]; then \
-        dnn_ver="8.4.1.50-1.cuda11.6";fi && \
-    dnf install -y --nogpgcheck --setopt=obsoletes=0 \
-        libcudnn8-${dnn_ver} && \
+        dnn_ver="8.4.1.50-1+cuda11.6";fi && \
+    apt install -y --no-install-recommends \
+        libcudnn8=${dnn_ver} && \
     if [ -n "${TF_VERSION}" ]; then \
         curl -LO https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
         tar zxf libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz -C /usr/local/ && \
-        rm -rf /usr/local/include/tensorflow && \
         python3 -m pip install --no-cache-dir tensorflow-gpu==2.6.0; \
     elif [ -n "${TRT_VERSION}" ]; then \
         if [ "${TRT_VERSION}" = "7.1.3.4" ]; then \
-            trt_ver="7-7.1.3-1.cuda10.2"; \
+            trt_ver="7=7.1.3-1+cuda10.2"; \
         elif [ "${TRT_VERSION}" = "8.4.2.4" ]; then \
-            trt_ver="8-8.4.2-1.cuda11.6";fi && \
-        dnf install -y --nogpgcheck --setopt=obsoletes=0 \
+            trt_ver="8=8.4.2-1+cuda11.6";fi && \
+        apt install -y --no-install-recommends \
             libnvinfer${trt_ver} \
             libnvonnxparsers${trt_ver} \
             libnvparsers${trt_ver} \
@@ -64,12 +66,12 @@ RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
     elif [ -n "${TORCH_VERSION}" ]; then \
         curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
         unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
-        cp -af libtorch/lib /usr/local/;fi && \
+        cp -af libtorch/* /usr/local/;fi && \
     find /usr/local -name "*.a"|xargs rm -f && \
-    dnf clean all && rm -rf /var/cache/dnf/* /root/*
+    rm -rf /var/lib/apt/lists/* /root/*
 
 RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
+    dpkg -i /opt/release/*.deb && \
     (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
@@ -79,12 +81,10 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
-    sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo "/usr/local/lib" >>/etc/ld.so.conf && \
-    echo "/usr/local/lib64" >>/etc/ld.so.conf && \
+    echo "/usr/local/lib" >>  /etc/ld.so.conf && \
     echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
     echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf && \
-    echo "export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig" > /etc/profile.d/pkgconfig.sh && \
+    sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
     ldconfig -v 2>/dev/null && systemctl enable modelbox
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
@@ -98,4 +98,4 @@ ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES video,compute,utility
 ENV NVIDIA_REQUIRE_CUDA "${NVIDIA_REQUIRE_CUDA}"
 
-CMD ["/usr/sbin/init", "--log-target=journal"]
+CMD ["/sbin/init", "--log-target=journal"]
