--- a/docker/Dockerfile.ascend.develop.ubuntu
+++ b/docker/Dockerfile.ascend.develop.ubuntu
@@ -1,5 +1,5 @@
 FROM modelbox/ascend-base-ubuntu:latest
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 COPY release /opt/release
 COPY --from=0 /usr/local/Ascend_dev /usr/local/Ascend
@@ -13,7 +13,7 @@ ENV ASCEND_AICPU_PATH=${ASCEND_PATH}/ascend-toolkit/latest
 ENV ASCEND_OPP_PATH=${ASCEND_PATH}/ascend-toolkit/latest/opp
 ENV TOOLCHAIN_HOME=${ASCEND_PATH}/ascend-toolkit/latest/toolkit
 ENV TBE_IMPL_PATH=${ASCEND_PATH}/ascend-toolkit/latest/opp/op_impl/build-in/ai_core/tbe
-ENV MINDSPORE_PATH=/usr/local/lib/python3.7/dist-packages/mindspore
+ENV MINDSPORE_PATH=/usr/local/lib/python3.9/dist-packages/mindspore
 ENV DDK_PATH=${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib
 ENV DRIVER_PATH=${ASCEND_PATH}/driver
 
@@ -36,20 +36,19 @@ WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
     if [ "$(arch)" = "aarch64" ];then sed -i 's@ports.ubuntu.com@mirrors.ustc.edu.cn@g' /etc/apt/sources.list;fi && \
-    rm -rf /var/lib/dpkg/info/* && \
-    apt update && apt upgrade -y && \
-    apt install -y python3.7-dev python3-pip python3-apt python3-setuptools apt-utils && \
-    apt install -y \
-        dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
+    apt update && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt install -y python3.9-dev python3-pip python3-apt python3-setuptools apt-utils && \
+    apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
         build-essential unzip ffmpeg sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server \
         pkg-config kmod net-tools pciutils libssl-dev libcpprest-dev libswscale-dev libavformat-dev \
         graphviz libgraphviz-dev libfuse-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev \
         libopenblas-dev netcat clang clang-tidy-10 && \
-    ln -sf clang-tidy-10 /usr/bin/clang-tidy && ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
-    rm -f /usr/bin/python3 /usr/bin/python && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python3.7 100 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 100 && \
-    update-alternatives --config python3 && \
+    update-ca-certificates && \
+    DEBIAN_FRONTEND=noninteractive apt upgrade -y && \
+    ln -sf clang-tidy-10 /usr/bin/clang-tidy && \
+    ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
+    ln -sf python3.9 /usr/bin/python3 && \
     ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
     rm -rf /var/lib/apt/lists/* /root/*
 
@@ -63,7 +62,7 @@ RUN mkdir -p /root/.pip && \
     useradd -g HwHiAiUser -d /home/HwHiAiUser -m HwHiAiUser && \
     python3 -m pip install --upgrade pip && \
     python3 -m pip install --no-cache-dir wheel psutil numpy attrs psutil decorator protobuf scipy sympy cffi grpcio grpcio-tools requests pillow pyyaml opencv-contrib-python==4.5.5.64 && \
-    python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.6.1/MindSpore/ascend/$(arch)/mindspore_ascend-1.6.1-cp37-cp37m-linux_$(arch).whl && \
+    python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.6.1/MindSpore/ascend/$(arch)/mindspore_ascend-1.6.1-cp39-cp39-linux_$(arch).whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/topi-0.4.0-py3-none-any.whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/te-0.4.0-py3-none-any.whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/hccl-0.1.0-py3-none-any.whl && \
