--- a/docker/Dockerfile.ascend.runtime.ubuntu
+++ b/docker/Dockerfile.ascend.runtime.ubuntu
@@ -1,5 +1,5 @@
 FROM modelbox/ascend-base-ubuntu:latest
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 COPY release /opt/release
 COPY --from=0 /usr/local/Ascend_run /usr/local/Ascend
@@ -21,16 +21,15 @@ WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
     if [ "$(arch)" = "aarch64" ];then sed -i 's@ports.ubuntu.com@mirrors.ustc.edu.cn@g' /etc/apt/sources.list;fi && \
-    rm -rf /var/lib/dpkg/info/* && \
-    apt update && apt upgrade -y && \
-    apt install -y python3.7-dev python3-pip python3-apt python3-setuptools && \
+    apt update && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt install -y python3.9-dev python3-pip python3-apt python3-setuptools && \
     apt install -y gcc dbus systemd systemd-cron iproute2 gnupg2 libfuse2 libgtk-3-0 \
-        build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape202 \
-        libssl1.1 libcpprest libswscale4 libavformat57 graphviz libprotobuf-c1 libopenblas-base && \
-    rm -f /usr/bin/python3 /usr/bin/python && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python3.7 100 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 100 && \
-    update-alternatives --config python3 && \
+        build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape205 \
+        libssl1.1 libcpprest graphviz libprotobuf-c1 libopenblas-base && \
+    update-ca-certificates && \
+    DEBIAN_FRONTEND=noninteractive apt upgrade -y && \
+    ln -sf python3.9 /usr/bin/python3 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /root/.pip && \
@@ -43,7 +42,7 @@ RUN mkdir -p /root/.pip && \
     useradd -g HwHiAiUser -d /home/HwHiAiUser -m HwHiAiUser && \
     python3 -m pip install --upgrade pip && \
     python3 -m pip install --no-cache-dir numpy decorator psutil sympy cffi pyyaml pathlib2 grpcio grpcio-tools protobuf scipy requests pillow opencv-contrib-python==4.5.5.64 && \
-    python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.6.1/MindSpore/ascend/$(arch)/mindspore_ascend-1.6.1-cp37-cp37m-linux_$(arch).whl && \
+    python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.6.1/MindSpore/ascend/$(arch)/mindspore_ascend-1.6.1-cp39-cp39-linux_$(arch).whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/nnae/latest/fwkacllib/lib64/topi-0.4.0-py3-none-any.whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/nnae/latest/fwkacllib/lib64/te-0.4.0-py3-none-any.whl && \
     python3 -m pip install --no-cache-dir ${ASCEND_PATH}/nnae/latest/fwkacllib/lib64/hccl-0.1.0-py3-none-any.whl && \
