--- a/docker/Dockerfile.cuda.develop.ubuntu
+++ b/docker/Dockerfile.cuda.develop.ubuntu
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=ubuntu:18.04
+ARG BASE_IMAGE=ubuntu:20.04
 FROM ${BASE_IMAGE} as base
 
 COPY release /opt/release
@@ -15,19 +15,19 @@ ARG NVIDIA_REQUIRE_CUDA
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    apt update && apt upgrade -y && \
-    apt install -y python3.7-dev python3-pip python3-apt python3-setuptools && \
-    apt install -y \
-        dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt update && \
+    apt install -y python3.9-dev python3-pip python3-apt python3-setuptools && \
+    apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
         build-essential unzip ffmpeg sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server \
         pkg-config kmod net-tools pciutils libgtk-3-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev \
         libssl-dev libcpprest-dev libswscale-dev libavformat-dev graphviz libgraphviz-dev libfuse-dev \
         netcat clang clang-tidy-10 && \
-    ln -sf clang-tidy-10 /usr/bin/clang-tidy && ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
-    rm -f /usr/bin/python3 /usr/bin/python && \
-    update-alternatives --install /usr/bin/python python /usr/bin/python3.7 100 && \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.7 100 && \
-    update-alternatives --config python3 && \
+    update-ca-certificates && \
+    DEBIAN_FRONTEND=noninteractive apt upgrade -y && \
+    ln -sf clang-tidy-10 /usr/bin/clang-tidy && \
+    ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
+    ln -sf python3.9 /usr/bin/python3 && \
     ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
     rm -rf /var/lib/apt/lists/* /root/*
 
@@ -38,10 +38,10 @@ RUN mkdir -p /root/.pip && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
     python3 -m pip install --upgrade pip && \
     python3 -m pip install --no-cache-dir psutil wheel numpy pyyaml requests pillow opencv-contrib-python==4.5.5.64 && \
-    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub | apt-key add - && \
-    curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub | apt-key add - && \
-    echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
-    echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
+    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/3bf863cc.pub | apt-key add - && \
+    curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64/7fa2af80.pub | apt-key add - && \
+    echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
+    echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
     apt update && \
     apt install -y --no-install-recommends \
         cuda-cudart-${CUDA_VER}=${CUDA_CUDART_VERSION} \
@@ -85,9 +85,7 @@ RUN apt update && \
             libnvonnxparsers${trt_ver} \
             libnvonnxparsers-dev=${trt_ver#*=} \
             libnvinfer-plugin${trt_ver} \
-            libnvinfer-plugin-dev=${trt_ver#*=} \
-            python3-libnvinfer=${trt_ver#*=} \
-            python3-libnvinfer-dev=${trt_ver#*=};fi && \
+            libnvinfer-plugin-dev=${trt_ver#*=};fi && \
     rm -rf /var/lib/apt/lists/* /root/*
 
 RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
