--- a/.github/workflows/manual-build-with-image.yml
+++ b/.github/workflows/manual-build-with-image.yml
@@ -3,7 +3,7 @@ name: Build With Specific Images
 on:
   workflow_dispatch:
     inputs:
-      images_name:
+      image_name:
         type: choice
         description: Images Lists
         options: 
@@ -11,38 +11,39 @@ on:
         - modelbox/modelbox-develop-tensorflow_2.6.0-cuda_11.2-ubuntu-x86_64
         - modelbox/modelbox-develop-libtorch_1.9.1-cuda_10.2-ubuntu-x86_64
         - modelbox/modelbox-develop-tensorrt_7.1.3-cuda_10.2-ubuntu-x86_64
-        - modelbox/modelbox-develop-mindspore_1.9.0-cann_6.0.1-ubuntu-x86_64
+        - modelbox/modelbox-develop-mindspore_1.9.0-cann_6.0.1-d310-ubuntu-x86_64
         - modelbox/modelbox-develop-mindspore_1.9.0-cann_6.0.1-d310p-ubuntu-x86_64
         - modelbox/modelbox-develop-tensorrt_8.4.2-cuda_11.2-openeuler-x86_64
         - modelbox/modelbox-develop-tensorflow_2.6.0-cuda_11.2-openeuler-x86_64
         - modelbox/modelbox-develop-libtorch_1.9.1-cuda_10.2-openeuler-x86_64
         - modelbox/modelbox-develop-tensorrt_7.1.3-cuda_10.2-openeuler-x86_64
-        - modelbox/modelbox-develop-mindspore_1.9.0-cann_6.0.1-openeuler-x86_64
+        - modelbox/modelbox-develop-mindspore_1.9.0-cann_6.0.1-d310-openeuler-x86_64
         - modelbox/modelbox-develop-mindspore_1.9.0-cann_6.0.1-d310p-openeuler-x86_64
-
-env:
-  BUILD_TYPE: Release
+      version:
+          description: 'image tag(e.g. v1.1.0)'
+          required: true
+          default: 'latest'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ${{ github.event.inputs.images_name }}
+      image: ${{ github.event.inputs.image_name }}:${{ github.event.inputs.version }}
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
-    - name: Configure CMake
+      uses: actions/checkout@main
+    - name: CMake
       run: |
         mkdir build
         cd build
-        cmake .. -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DWITH_ALL_DEMO=on -DWITH_WEBUI=on
+        cmake .. -DCMAKE_BUILD_TYPE=Release -DWITH_ALL_DEMO=on -DWITH_WEBUI=on
     - name: Build
       working-directory: build
       run: make package -j8
     - name: Release check
       run: ./docker/artifact_check.sh
       shell: bash
-    - name: Test
+    - name: UnitTest
       working-directory: build
       run: |
         dpkg -r $(dpkg -l|grep  modelbox|awk '{print $2}') || true
