--- a/docker/Dockerfile.ascend.develop.ubuntu
+++ b/docker/Dockerfile.ascend.develop.ubuntu
@@ -1,4 +1,5 @@
-FROM modelbox/c83-base:latest
+ARG dtype
+FROM modelbox/c83-${dtype}:latest
 FROM ubuntu:20.04
 
 ARG dtype
@@ -8,49 +9,23 @@ COPY --from=0 /usr/local/Ascend_dev${dtype} /usr/local/Ascend
 COPY --from=0 /usr/local/sbin/npu-smi${dtype} /usr/local/sbin/npu-smi
 ADD *.tar.gz /usr/local/
 
-ARG ASCEND_PATH=/usr/local/Ascend
-ENV LOCAL_ASCEND=/usr/local/Ascend
-ENV ASCEND_AICPU_PATH=${ASCEND_PATH}/ascend-toolkit/latest
-ENV ASCEND_OPP_PATH=${ASCEND_PATH}/ascend-toolkit/latest/opp
-ENV TOOLCHAIN_HOME=${ASCEND_PATH}/ascend-toolkit/latest/toolkit
-ENV TBE_IMPL_PATH=${ASCEND_PATH}/ascend-toolkit/latest/opp/op_impl/build-in/ai_core/tbe
-ENV MINDSPORE_PATH=/usr/local/lib/python3.8/dist-packages/mindspore
-ENV DDK_PATH=${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib
-ENV DRIVER_PATH=${ASCEND_PATH}/driver
-
-ENV PATH=\
-${ASCEND_PATH}/ascend-toolkit/latest/atc/bin:\
-${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/bin:\
-${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/ccec_compiler/bin:\
-${ASCEND_PATH}/ascend-toolkit/latest/atc/ccec_compiler/bin${PATH:+:${PATH}}
-
-ENV PYTHONPATH=\
-${ASCEND_PATH}/ascend-toolkit/latest/atc/python/site-packages:\
-${ASCEND_PATH}/ascend-toolkit/latest/toolkit/python/site-packages:\
-${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/python/site-packages:\
-${ASCEND_PATH}/ascend-toolkit/latest/opp/op_impl/build-in/ai_core/tbe:\
-${ASCEND_PATH}/ascend-toolkit/latest/pyACL/python/site-packages/acl${PYTHONPATH:+:${PYTHONPATH}}
-
-ENV LD_LIBRARY_PATH=${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+ENV DDK_PATH=/usr/local/Ascend/ascend-toolkit/latest
+ENV DRIVER_PATH=/usr/local/Ascend/driver
 
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    echo "deb http://archive.ubuntu.com/ubuntu/ bionic-proposed main restricted universe multiverse" >>/etc/apt/sources.list && \
-    if [ "$(arch)" = "aarch64" ];then sed -i '/proposed/d' /etc/apt/sources.list;fi && \
     export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
     apt update && \
-    apt install -y python3.8-dev python3-pip python3-apt python3-setuptools apt-utils && \
+    apt install -y python3-dev python3-pip python3-apt python3-setuptools apt-utils build-essential && \
     apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
-        build-essential unzip ffmpeg sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server \
-        pkg-config kmod net-tools pciutils libssl-dev libcpprest-dev libswscale-dev libavformat-dev \
-        graphviz libgraphviz-dev libfuse-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev \
-        libopenblas-dev netcat clang clang-tidy-10 libgoogle-glog-dev libtbb-dev && \
+        unzip sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server kmod libopencv-dev \
+        pkg-config net-tools pciutils libssl-dev libcpprest-dev netcat mosquitto mosquitto-clients \
+        graphviz libgraphviz-dev libfuse-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev libtbb-dev \
+        ffmpeg libavcodec-dev libswscale-dev libavformat-dev libjpeg-dev libpng-dev libtiff-dev \
+        libopenblas-dev clang clang-tidy libgoogle-glog-dev libgtk-3-dev && \
     update-ca-certificates && apt upgrade -y && \
-    ln -sf clang-tidy-10 /usr/bin/clang-tidy && \
-    ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
     ln -sf python3.8 /usr/bin/python3 && \
-    ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /root/.pip && \
@@ -60,29 +35,44 @@ RUN mkdir -p /root/.pip && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
     groupadd HwHiAiUser && \
     useradd -g HwHiAiUser -d /home/HwHiAiUser -m HwHiAiUser && \
-    python3 -m pip install --upgrade pip && \
+    python3 -m pip install --no-cache-dir --ignore-installed --upgrade pip setuptools && \
     python3 -m pip install --no-cache-dir wheel psutil numpy attrs psutil decorator protobuf scipy sympy cffi grpcio grpcio-tools requests pillow pyyaml opencv-python==4.5.5.64 && \
-    python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/ascend/$(arch)/mindspore_ascend-1.9.0-cp38-cp38-linux_$(arch).whl && \
-    python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/topi-0.4.0-py3-none-any.whl && \
-    python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/te-0.4.0-py3-none-any.whl && \
-    python3 -m pip install --no-cache-dir ${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64/hccl-0.1.0-py3-none-any.whl && \
-    echo "${ASCEND_PATH}/ascend-toolkit/latest/fwkacllib/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
-    echo "${ASCEND_PATH}/driver/lib64/driver" >>/etc/ld.so.conf.d/ascend.conf && \
-    echo "${ASCEND_PATH}/driver/lib64/common" >>/etc/ld.so.conf.d/ascend.conf && \
-    echo "${ASCEND_PATH}/driver/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
-    sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/ascend-toolkit/latest/lib64/topi-*-py3-none-any.whl && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/ascend-toolkit/latest/lib64/te-*-py3-none-any.whl && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/ascend-toolkit/latest/lib64/hccl-*-py3-none-any.whl && \
+    echo "/usr/local/Ascend/ascend-toolkit/latest/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
+    echo "/usr/local/Ascend/driver/lib64/driver" >>/etc/ld.so.conf.d/driver.conf && \
+    echo "/usr/local/Ascend/driver/lib64/common" >>/etc/ld.so.conf.d/driver.conf && \
+    echo "/usr/local/Ascend/driver/lib64" >>/etc/ld.so.conf.d/driver.conf && \
+    sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf && \
+    rm -rf /root/* /root/.cache
 
 RUN if [ "$(arch)" = "aarch64" ];then node_arch="arm64";else node_arch="x64";fi && \
-    curl https://nodejs.org/dist/v16.13.2/node-v16.13.2-linux-${node_arch}.tar.xz|tar -xJ && \
-    cp -af node-v16.13.2-linux-${node_arch}/* /usr/local/ && \
-    npm install -g npm@latest && npm -v && node -v && \
+    curl https://nodejs.org/dist/v16.20.0/node-v16.20.0-linux-${node_arch}.tar.xz|tar -xJ && \
+    chown -R root.root node-v16.20.0-linux-${node_arch} && \
+    rm -f node-v16.20.0-linux-${node_arch}/LICENSE node-v16.20.0-linux-${node_arch}/*.md && \
+    cp -af node-v16.20.0-linux-${node_arch}/* /usr/ && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm install -g npm@latest uuid@latest && \
     npm install -g @angular/cli && \
-    npm cache clean --force && rm -rf /root/* && \
-    python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    dpkg -i /opt/release/*.deb && \
-    usermod -G HwHiAiUser modelbox
+    npm cache clean --force && \
+    rm -rf /root/*
 
-RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN if [ "$(arch)" = "aarch64" ];then arch="aarch64";else arch="x64";fi && \
+    curl -k -LO https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/lite/release/linux/$(arch)/ascend/mindspore-lite-1.9.0-linux-${arch}.tar.gz && \
+    tar zxf mindspore-lite-1.9.0-linux-${arch}.tar.gz -C /usr/local && \
+    ln -sf mindspore-lite-1.9.0-linux-${arch} /usr/local/mindspore-lite && \
+    ln -sf /usr/local/mindspore-lite/tools/converter/converter/converter_lite /usr/local/bin/converter_lite && \
+    ln -sf /usr/local/mindspore-lite/tools/benchmark/benchmark /usr/local/bin/benchmark && \
+    echo "/usr/local/mindspore-lite/runtime/lib" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
+    echo "/usr/local/mindspore-lite/tools/converter/lib" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
+    echo "/usr/local/mindspore-lite/runtime/third_party/dnnl" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
+    rm -rf /root/* /root/.cache
+
+RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
+    dpkg -i /opt/release/*.deb && \
+    usermod -G HwHiAiUser modelbox && \
+    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
@@ -95,7 +85,9 @@ RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
     echo 'export TMOUT=0' >> /etc/bash.bashrc && \
     echo 'export HISTSIZE=1000' >> /etc/bash.bashrc && \
-    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
+    echo 'export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
+    echo 'export LD_LIBRARY_PATH=/usr/local/lib64' >> /etc/bash.bashrc && \
+    echo 'source /usr/local/Ascend/ascend-toolkit/set_env.sh' >> /etc/bash.bashrc && \
     echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> ~/.bashrc && \
     echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && systemctl enable ssh
 
