--- a/docker/Dockerfile.ascend.develop2.openeuler
+++ b/docker/Dockerfile.ascend.develop2.openeuler
@@ -4,21 +4,21 @@ FROM openeuler/openeuler:20.03-lts-sp3
 
 ARG dtype
 
-COPY release /opt/release
-COPY --from=0 /usr/local/Ascend_run${dtype} /usr/local/Ascend
+COPY --from=0 /usr/local/Ascend_dev${dtype} /usr/local/Ascend
 COPY --from=0 /usr/local/sbin/npu-smi${dtype} /usr/local/sbin/npu-smi
 ADD *.tar.gz /usr/local/
-
-ENV DDK_PATH=/usr/local/Ascend/nnae/latest
-ENV DRIVER_PATH=/usr/local/Ascend/driver
 
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
     sed -i 's@http://repo.openeuler.org@https://ftp.agdsn.de/openeuler@g' /etc/yum.repos.d/openEuler.repo && \
     dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck curl boost libnsl libssh2 libatomic mesa-libGL graphviz protobuf-c \
-        systemd openblas gcc python3-devel lapack python3-perf fuse libxml2 openssl bc && \
+    dnf install -y --nogpgcheck vim gcc gcc-c++ make cmake libnsl perf doxygen gcc-gfortran pciutils alsa-lib gtk3-devel \
+        zlib-devel curl-devel bzip2-devel rpm-build sqlite-devel libffi-devel openssl-devel xz-devel git passwd gdb clang \
+        krb5-devel expat-devel boost-devel ncurses-devel libxml2-devel libssh2-devel python3-devel python3-perf bc nc \
+        readline-devel nss-devel fuse-devel gdbm-devel glibc-devel glibc-debuginfo gnutls-devel net-tools libatomic \
+        xauth tk-devel lapack-devel graphviz-devel mesa-libGL-devel openblas-devel protobuf-c-devel openssh-server && \
+    dnf remove -y python2-devel && \
     dnf clean all && rm -rf /var/cache/dnf/*
 
 RUN mkdir -p /root/.pip && \
@@ -29,17 +29,27 @@ RUN mkdir -p /root/.pip && \
     groupadd HwHiAiUser && \
     useradd -g HwHiAiUser -d /home/HwHiAiUser -m HwHiAiUser && \
     python3 -m pip install --no-cache-dir --ignore-installed --upgrade pip setuptools && \
-    python3 -m pip install --no-cache-dir numpy decorator sympy cffi pyyaml pathlib2 grpcio grpcio-tools protobuf scipy requests pillow opencv-python==4.5.5.64 && \
-    python3 -m pip install --no-cache-dir /usr/local/Ascend/nnae/latest/lib64/topi-*-py3-none-any.whl && \
-    python3 -m pip install --no-cache-dir /usr/local/Ascend/nnae/latest/lib64/te-*-py3-none-any.whl && \
-    python3 -m pip install --no-cache-dir /usr/local/Ascend/nnae/latest/lib64/hccl-*-py3-none-any.whl && \
-    echo "/usr/local/Ascend/nnae/latest/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
+    python3 -m pip install --no-cache-dir wheel numpy attrs psutil decorator protobuf scipy sympy cffi grpcio grpcio-tools requests pillow pyyaml opencv-python==4.5.5.64 && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/ascend-toolkit/latest/lib64/topi-*-py3-none-any.whl && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/ascend-toolkit/latest/lib64/hccl-*-py3-none-any.whl && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/ascend-toolkit/latest/lib64/te-*-py3-none-any.whl && \
+    echo "/usr/local/Ascend/ascend-toolkit/latest/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
     echo "/usr/local/Ascend/driver/lib64/driver" >>/etc/ld.so.conf.d/driver.conf && \
     echo "/usr/local/Ascend/driver/lib64/common" >>/etc/ld.so.conf.d/driver.conf && \
     echo "/usr/local/Ascend/driver/lib64" >>/etc/ld.so.conf.d/driver.conf && \
     sed -i '/include/i\/usr/local/lib64' /etc/ld.so.conf && \
     sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf && \
-    find /usr/local -name "*.a"|xargs rm -f
+    rm -rf /root/* /root/.cache
+
+RUN if [ "$(arch)" = "aarch64" ];then node_arch="arm64";else node_arch="x64";fi && \
+    curl https://nodejs.org/dist/v16.20.0/node-v16.20.0-linux-${node_arch}.tar.xz|tar -xJ && \
+    chown -R root.root node-v16.20.0-linux-${node_arch} && \
+    cp -af node-v16.20.0-linux-${node_arch}/{bin,include,lib,share} /usr/ && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm install -g npm@latest uuid@latest && \
+    npm install -g @angular/cli && \
+    npm cache clean --force && \
+    rm -rf /root/*
 
 RUN if [ "$(arch)" = "aarch64" ];then arch="aarch64";else arch="x64";fi && \
     curl -k -LO https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/lite/release/linux/$(arch)/ascend/mindspore-lite-1.9.0-linux-${arch}.tar.gz && \
@@ -54,10 +64,7 @@ RUN if [ "$(arch)" = "aarch64" ];then arch="aarch64";else arch="x64";fi && \
     python3 -m pip install --no-cache-dir mindspore_lite-1.9.0-cp37-cp37m-linux_$(arch).whl && \
     rm -rf /root/* /root/.cache
 
-RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
-    usermod -G HwHiAiUser modelbox && \
-    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
@@ -67,11 +74,15 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
     sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo 'source /usr/local/Ascend/nnae/set_env.sh' >> /etc/bashrc && \
-    echo "ldconfig &>/dev/null" >> /etc/bashrc && \
-    systemctl enable modelbox
+    echo 'export TMOUT=0' >> /etc/bashrc && \
+    echo 'export HISTSIZE=1000' >> /etc/bashrc && \
+    echo 'export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bashrc && \
+    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> /etc/bashrc && \
+    echo 'export LD_LIBRARY_PATH=/usr/local/lib64' >> /etc/bashrc && \
+    echo 'source /usr/local/Ascend/ascend-toolkit/set_env.sh' >> /etc/bashrc && \
+    echo "ldconfig &>/dev/null" >> /etc/bashrc && systemctl enable sshd
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
 
-CMD ["/usr/sbin/init", "--log-target=journal"]
+CMD ["/sbin/init", "--log-target=journal"]
