--- a/docker/Dockerfile.ascend.runtime.ubuntu
+++ b/docker/Dockerfile.ascend.runtime.ubuntu
@@ -1,4 +1,5 @@
-FROM modelbox/c83-base:latest
+ARG dtype
+FROM modelbox/c83-${dtype}:latest
 FROM ubuntu:20.04
 
 ARG dtype
@@ -8,28 +9,19 @@ COPY --from=0 /usr/local/Ascend_run${dtype} /usr/local/Ascend
 COPY --from=0 /usr/local/sbin/npu-smi${dtype} /usr/local/sbin/npu-smi
 ADD *.tar.gz /usr/local/
 
-ARG ASCEND_PATH=/usr/local/Ascend
-ENV LOCAL_ASCEND=/usr/local/Ascend
-ENV ASCEND_AICPU_PATH=${ASCEND_PATH}/nnae/latest
-ENV ASCEND_OPP_PATH=${ASCEND_PATH}/nnae/latest/opp
-ENV DDK_PATH=${ASCEND_PATH}/nnae/latest/fwkacllib
-ENV DRIVER_PATH=${ASCEND_PATH}/driver
-
-ENV PYTHONPATH=${ASCEND_PATH}/nnae/latest/pyACL/python/site-packages/acl${PYTHONPATH:+:${PYTHONPATH}}
-
-ENV LD_LIBRARY_PATH=${ASCEND_PATH}/nnae/latest/fwkacllib/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+ENV DDK_PATH=/usr/local/Ascend/nnae/latest
+ENV DRIVER_PATH=/usr/local/Ascend/driver
 
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    echo "deb http://archive.ubuntu.com/ubuntu/ bionic-proposed main restricted universe multiverse" >>/etc/apt/sources.list && \
     if [ "$(arch)" = "aarch64" ];then sed -i '/proposed/d' /etc/apt/sources.list;fi && \
     export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
     apt update && \
-    apt install -y python3.8-dev python3-pip python3-apt python3-setuptools && \
-    apt install -y vim gcc dbus systemd systemd-cron iproute2 gnupg2 libfuse2 libgtk-3-0 \
-        build-essential bash unzip ffmpeg curl pkg-config ca-certificates libduktape205 \
-        libssl1.1 libcpprest graphviz libprotobuf-c1 libopenblas-base libgoogle-glog0v5 libtbb2 && \
+    apt install -y python3-dev python3-pip python3-apt python3-setuptools ca-certificates && \
+    apt install -y vim bash unzip curl pkg-config systemd iproute2 gnupg2 libfuse2 libgtk-3-0 \
+        duktape mosquitto libssl1.1 libcpprest libprotobuf-c1 libopenblas-base libgoogle-glog0v5 \
+        ffmpeg libavcodec58 libswscale5 libavformat58 libjpeg8 libpng16-16 libtiff5 libtbb2 && \
     update-ca-certificates && apt upgrade -y && \
     ln -sf python3.8 /usr/bin/python3 && \
     rm -rf /var/lib/apt/lists/*
@@ -39,21 +31,30 @@ RUN mkdir -p /root/.pip && \
     echo "index-url = https://pypi.python.org/simple" >>/root/.pip/pip.conf && \
     echo "trusted-host = pypi.python.org" >>/root/.pip/pip.conf && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
-    if [ "$(arch)" = "aarch64" ];then sed -i 's@python.org@douban.com@g' /root/.pip/pip.conf;fi && \
     groupadd HwHiAiUser && \
     useradd -g HwHiAiUser -d /home/HwHiAiUser -m HwHiAiUser && \
-    python3 -m pip install --upgrade pip && \
-    python3 -m pip install --no-cache-dir numpy decorator psutil sympy cffi pyyaml pathlib2 grpcio grpcio-tools protobuf scipy requests pillow opencv-python==4.5.5.64 && \
-    python3 -m pip install --no-cache-dir https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/ascend/$(arch)/mindspore_ascend-1.9.0-cp38-cp38-linux_$(arch).whl && \
-    python3 -m pip install --no-cache-dir ${ASCEND_PATH}/nnae/latest/fwkacllib/lib64/topi-0.4.0-py3-none-any.whl && \
-    python3 -m pip install --no-cache-dir ${ASCEND_PATH}/nnae/latest/fwkacllib/lib64/te-0.4.0-py3-none-any.whl && \
-    python3 -m pip install --no-cache-dir ${ASCEND_PATH}/nnae/latest/fwkacllib/lib64/hccl-0.1.0-py3-none-any.whl && \
-    echo "${ASCEND_PATH}/nnae/latest/fwkacllib/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
-    echo "${ASCEND_PATH}/driver/lib64/driver" >>/etc/ld.so.conf.d/ascend.conf && \
-    echo "${ASCEND_PATH}/driver/lib64/common" >>/etc/ld.so.conf.d/ascend.conf && \
-    echo "${ASCEND_PATH}/driver/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
+    python3 -m pip install --no-cache-dir --ignore-installed --upgrade pip setuptools && \
+    python3 -m pip install --no-cache-dir numpy decorator sympy cffi pyyaml pathlib2 grpcio grpcio-tools protobuf scipy requests pillow opencv-python==4.5.5.64 && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/nnae/latest/lib64/topi-*-py3-none-any.whl && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/nnae/latest/lib64/te-*-py3-none-any.whl && \
+    python3 -m pip install --no-cache-dir /usr/local/Ascend/nnae/latest/lib64/hccl-*-py3-none-any.whl && \
+    echo "/usr/local/Ascend/nnae/latest/lib64" >>/etc/ld.so.conf.d/ascend.conf && \
+    echo "/usr/local/Ascend/driver/lib64/driver" >>/etc/ld.so.conf.d/driver.conf && \
+    echo "/usr/local/Ascend/driver/lib64/common" >>/etc/ld.so.conf.d/driver.conf && \
+    echo "/usr/local/Ascend/driver/lib64" >>/etc/ld.so.conf.d/driver.conf && \
     sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf && \
     find /usr/local -name "*.a"|xargs rm -f
+
+RUN if [ "$(arch)" = "aarch64" ];then arch="aarch64";else arch="x64";fi && \
+    curl -k -LO https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/lite/release/linux/$(arch)/ascend/mindspore-lite-1.9.0-linux-${arch}.tar.gz && \
+    tar zxf mindspore-lite-1.9.0-linux-${arch}.tar.gz -C /usr/local && \
+    ln -sf mindspore-lite-1.9.0-linux-${arch} /usr/local/mindspore-lite && \
+    ln -sf /usr/local/mindspore-lite/tools/converter/converter/converter_lite /usr/local/bin/converter_lite && \
+    ln -sf /usr/local/mindspore-lite/tools/benchmark/benchmark /usr/local/bin/benchmark && \
+    echo "/usr/local/mindspore-lite/runtime/lib" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
+    echo "/usr/local/mindspore-lite/tools/converter/lib" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
+    echo "/usr/local/mindspore-lite/runtime/third_party/dnnl" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
+    rm -rf /root/* /root/.cache
 
 RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
     dpkg -i /opt/release/*.deb && \
@@ -68,7 +69,9 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
     sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && systemctl enable modelbox
+    echo 'source /usr/local/Ascend/nnae/set_env.sh' >> /etc/bash.bashrc && \
+    echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && \
+    systemctl enable modelbox
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
