--- a/docker/Dockerfile.ascend.runtime2.ubuntu
+++ b/docker/Dockerfile.ascend.runtime2.ubuntu
@@ -1,10 +1,9 @@
 ARG dtype
 FROM modelbox/c83-${dtype}:latest
-FROM openeuler/openeuler:20.03-lts-sp3
+FROM ubuntu:20.04
 
 ARG dtype
 
-COPY release /opt/release
 COPY --from=0 /usr/local/Ascend_run${dtype} /usr/local/Ascend
 COPY --from=0 /usr/local/sbin/npu-smi${dtype} /usr/local/sbin/npu-smi
 ADD *.tar.gz /usr/local/
@@ -15,11 +14,16 @@ ENV DRIVER_PATH=/usr/local/Ascend/driver
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    sed -i 's@http://repo.openeuler.org@https://ftp.agdsn.de/openeuler@g' /etc/yum.repos.d/openEuler.repo && \
-    dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck curl boost libnsl libssh2 libatomic mesa-libGL graphviz protobuf-c \
-        systemd openblas gcc python3-devel lapack python3-perf fuse libxml2 openssl bc && \
-    dnf clean all && rm -rf /var/cache/dnf/*
+    if [ "$(arch)" = "aarch64" ];then sed -i '/proposed/d' /etc/apt/sources.list;fi && \
+    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
+    apt update && \
+    apt install -y python3-dev python3-pip python3-apt python3-setuptools ca-certificates && \
+    apt install -y vim bash unzip curl pkg-config systemd iproute2 gnupg2 libfuse2 libgtk-3-0 \
+        duktape mosquitto libssl1.1 libcpprest libprotobuf-c1 libopenblas-base libgoogle-glog0v5 \
+        ffmpeg libavcodec58 libswscale5 libavformat58 libjpeg8 libpng16-16 libtiff5 libtbb2 && \
+    update-ca-certificates && apt upgrade -y && \
+    ln -sf python3.8 /usr/bin/python3 && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /root/.pip && \
     echo "[global]" > /root/.pip/pip.conf && \
@@ -37,13 +41,11 @@ RUN mkdir -p /root/.pip && \
     echo "/usr/local/Ascend/driver/lib64/driver" >>/etc/ld.so.conf.d/driver.conf && \
     echo "/usr/local/Ascend/driver/lib64/common" >>/etc/ld.so.conf.d/driver.conf && \
     echo "/usr/local/Ascend/driver/lib64" >>/etc/ld.so.conf.d/driver.conf && \
-    sed -i '/include/i\/usr/local/lib64' /etc/ld.so.conf && \
     sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf && \
     find /usr/local -name "*.a"|xargs rm -f
 
 RUN if [ "$(arch)" = "aarch64" ];then arch="aarch64";else arch="x64";fi && \
     curl -k -LO https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/lite/release/linux/$(arch)/ascend/mindspore-lite-1.9.0-linux-${arch}.tar.gz && \
-    curl -k -LO https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.9.0/MindSpore/lite/release/linux/$(arch)/ascend/mindspore_lite-1.9.0-cp37-cp37m-linux_$(arch).whl && \
     tar zxf mindspore-lite-1.9.0-linux-${arch}.tar.gz -C /usr/local && \
     ln -sf mindspore-lite-1.9.0-linux-${arch} /usr/local/mindspore-lite && \
     ln -sf /usr/local/mindspore-lite/tools/converter/converter/converter_lite /usr/local/bin/converter_lite && \
@@ -51,13 +53,9 @@ RUN if [ "$(arch)" = "aarch64" ];then arch="aarch64";else arch="x64";fi && \
     echo "/usr/local/mindspore-lite/runtime/lib" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
     echo "/usr/local/mindspore-lite/tools/converter/lib" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
     echo "/usr/local/mindspore-lite/runtime/third_party/dnnl" >> /etc/ld.so.conf.d/mindspore-lite.conf && \
-    python3 -m pip install --no-cache-dir mindspore_lite-1.9.0-cp37-cp37m-linux_$(arch).whl && \
     rm -rf /root/* /root/.cache
 
-RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
-    usermod -G HwHiAiUser modelbox && \
-    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
@@ -67,11 +65,10 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
     sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo 'source /usr/local/Ascend/nnae/set_env.sh' >> /etc/bashrc && \
-    echo "ldconfig &>/dev/null" >> /etc/bashrc && \
-    systemctl enable modelbox
+    echo 'source /usr/local/Ascend/nnae/set_env.sh' >> /etc/bash.bashrc && \
+    echo "ldconfig &>/dev/null" >> /etc/bash.bashrc
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
 
-CMD ["/usr/sbin/init", "--log-target=journal"]
+CMD ["/sbin/init", "--log-target=journal"]
