--- a/docker/Dockerfile.cuda.develop.openeuler
+++ b/docker/Dockerfile.cuda.develop.openeuler
@@ -17,14 +17,14 @@ ARG NVIDIA_REQUIRE_CUDA
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
+    sed -i 's@http://repo.openeuler.org@https://ftp.agdsn.de/openeuler@g' /etc/yum.repos.d/openEuler.repo && \
     dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck \
-        vim gcc gcc-c++ make cmake libnsl python3-perf doxygen pciutils gdb net-tools zlib-devel gnutls-devel nc gtk3-devel \
-        rpm-build gcc-gfortran alsa-lib nss-devel fuse-devel gdbm-devel krb5-devel expat-devel curl-devel bzip2-devel bc \
-        boost-devel ncurses-devel libxml2-devel libssh2-devel openssh-server python3-devel glibc-debuginfo libatomic systemd \
-        git clang xauth graphviz-devel sqlite-devel openssl-devel readline-devel mesa-libGL-devel protobuf-c-devel passwd && \
-    ln -sf pip3.7 /usr/bin/pip && ln -sf python3.7 /usr/bin/python3 && \
-    ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
+    dnf install -y --nogpgcheck vim gcc gcc-c++ make cmake libnsl perf doxygen gcc-gfortran pciutils alsa-lib gdb \
+            python3-devel python3-pip python3-numpy python3-pyyaml gtk3-devel gflags-devel clang libpng-devel nasm \
+            zlib-devel curl-devel bzip2-devel rpm-build sqlite-devel libffi-devel openssl-devel xz-devel git passwd \
+            krb5-devel expat-devel boost-devel ncurses-devel libxml2-devel libssh2-devel bc nc tk-devel lapack-devel \
+            readline-devel nss-devel fuse-devel gdbm-devel glibc-devel glibc-debuginfo gnutls-devel net-tools libatomic \
+            xauth graphviz-devel mesa-libGL-devel openblas-devel protobuf-c-devel ninja-build && \
     dnf clean all && rm -rf /var/cache/dnf/*
 
 RUN mkdir -p /root/.pip && \
@@ -32,7 +32,7 @@ RUN mkdir -p /root/.pip && \
     echo "index-url = https://pypi.python.org/simple" >>/root/.pip/pip.conf && \
     echo "trusted-host = pypi.python.org" >>/root/.pip/pip.conf && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
-    python3 -m pip install --upgrade pip && \
+    python3 -m pip install --no-cache-dir --ignore-installed --upgrade pip setuptools && \
     python3 -m pip install --no-cache-dir psutil pillow wheel numpy pyyaml requests opencv-python==4.5.5.64 && \
     NVIDIA_GPGKEY_SUM=d1be581509378368edeec8c1eb2958702feedf3bc3d17011adbf24efacce4ab5 && \
     curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/7fa2af80.pub | sed '/^Version/d' > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
@@ -43,9 +43,12 @@ RUN mkdir -p /root/.pip && \
         cuda-libraries-$([ "${CUDA_VERSION}" = "11.2" ] && echo "devel" || echo "dev")-${CUDA_VER} \
         cuda-command-line-tools-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
-    curl https://nodejs.org/dist/v16.13.2/node-v16.13.2-linux-x64.tar.xz|tar -xJ && \
-    cp -af node-v16.13.2-linux-x64/{bin,include,lib,share} /usr/local/ && \
-    npm install -g npm@latest && npm -v && node -v && \
+    curl https://nodejs.org/dist/v16.20.0/node-v16.20.0-linux-x64.tar.xz|tar -xJ && \
+    chown -R root.root node-v16.20.0-linux-x64 && \
+    cp -af node-v16.20.0-linux-x64/{bin,include,lib,share} /usr/ && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm -v && node -v && \
+    npm install -g npm@latest && \
     npm install -g @angular/cli && \
     npm cache clean --force && \
     dnf clean all && rm -rf /var/cache/dnf/* /root/*
@@ -68,9 +71,9 @@ RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
         unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
         cp -af libtorch/{include,lib,share} /usr/local/; \
     elif [ -n "${TRT_VERSION}" ]; then \
-        if [ "${TRT_VERSION}" = "7.1.3.4" ]; then \
+        if [ "${TRT_VERSION}" = "7.1.3" ]; then \
             trt_ver="7-7.1.3-1.cuda10.2" ; \
-        elif [ "${TRT_VERSION}" = "8.4.2.4" ]; then \
+        elif [ "${TRT_VERSION}" = "8.4.2" ]; then \
             trt_ver="8-8.4.2-1.cuda11.6";fi && \
         dnf install -y --nogpgcheck --setopt=obsoletes=0 \
             libnvinfer${trt_ver} \
@@ -102,7 +105,7 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     sed -i '/TMOUT/s/300/0/g' /etc/bashrc && \
     echo 'HISTSIZE=1000' >> /etc/bashrc && \
     echo "export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig" > /etc/profile.d/pkgconfig.sh && \
-    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bashrc && \
+    echo 'export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bashrc && \
     echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> /etc/bashrc && \
     echo "ldconfig &>/dev/null" >> /etc/bashrc && systemctl enable sshd
 
@@ -112,7 +115,7 @@ STOPSIGNAL SIGRTMIN+3
 LABEL com.nvidia.volumes.needed="nvidia_driver" com.nvidia.cuda.verison="${NVIDIA_CUDA_VERSION}"
 
 ENV PATH /usr/local/nvidia/bin:/usr/local/cuda/bin${PATH:+:${PATH}}
-ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/local/lib${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/local/lib:/usr/local/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES video,compute,utility
 ENV NVIDIA_REQUIRE_CUDA "${NVIDIA_REQUIRE_CUDA}"
