--- a/docker/Dockerfile.cuda.develop.ubuntu
+++ b/docker/Dockerfile.cuda.develop.ubuntu
@@ -16,20 +16,17 @@ ARG NVIDIA_REQUIRE_CUDA
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    echo "deb http://archive.ubuntu.com/ubuntu/ bionic-proposed main restricted universe multiverse" >>/etc/apt/sources.list && \
     export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
     apt update && \
-    apt install -y python3.8-dev python3-pip python3-apt python3-setuptools apt-utils && \
+    apt install -y python3.8-dev python3-pip python3-apt python3-setuptools apt-utils build-essential && \
     apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
-        build-essential unzip ffmpeg sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server \
-        pkg-config kmod net-tools pciutils libgtk-3-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev \
-        libssl-dev libcpprest-dev libswscale-dev libavformat-dev graphviz libgraphviz-dev libfuse-dev \
-        netcat clang clang-tidy-10 ccache libgoogle-glog-dev libtbb-dev && \
+        unzip sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server kmod libopencv-dev \
+        pkg-config net-tools pciutils libssl-dev libcpprest-dev netcat mosquitto mosquitto-clients \
+        graphviz libgraphviz-dev libfuse-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev libtbb-dev \
+        ffmpeg libavcodec-dev libswscale-dev libavformat-dev libjpeg-dev libpng-dev libtiff-dev \
+        libopenblas-dev clang clang-tidy libgoogle-glog-dev libgtk-3-dev && \
     update-ca-certificates && apt upgrade -y && \
-    ln -sf clang-tidy-10 /usr/bin/clang-tidy && \
-    ln -sf run-clang-tidy-10 /usr/bin/run-clang-tidy && \
     ln -sf python3.8 /usr/bin/python3 && \
-    ln -sf opencv4/opencv2 /usr/local/include/opencv2 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN mkdir -p /root/.pip && \
@@ -37,7 +34,7 @@ RUN mkdir -p /root/.pip && \
     echo "index-url = https://pypi.python.org/simple" >>/root/.pip/pip.conf && \
     echo "trusted-host = pypi.python.org" >>/root/.pip/pip.conf && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
-    python3 -m pip install --upgrade pip && \
+    python3 -m pip install --no-cache-dir --ignore-installed --upgrade pip setuptools && \
     python3 -m pip install --no-cache-dir psutil pillow wheel numpy pyyaml requests opencv-python==4.5.5.64 && \
     curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/3bf863cc.pub | apt-key add - && \
     curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64/7fa2af80.pub | apt-key add - && \
@@ -50,9 +47,13 @@ RUN mkdir -p /root/.pip && \
         cuda-libraries-dev-${CUDA_VER} \
         cuda-command-line-tools-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
-    curl https://nodejs.org/dist/v16.13.2/node-v16.13.2-linux-x64.tar.xz|tar -xJ && \
-    cp -af node-v16.13.2-linux-x64/* /usr/local/ && \
-    npm install -g npm@latest && npm -v && node -v && \
+    curl https://nodejs.org/dist/v16.20.0/node-v16.20.0-linux-x64.tar.xz|tar -xJ && \
+    chown -R root.root node-v16.20.0-linux-x64 && \
+    rm -f node-v16.20.0-linux-x64/LICENSE node-v16.20.0-linux-x64/*.md && \
+    cp -af node-v16.20.0-linux-x64/* /usr/ && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm -v && node -v && \
+    npm install -g npm@latest && \
     npm install -g @angular/cli && \
     npm cache clean --force && \
     rm -rf /var/lib/apt/lists/* /root/*
@@ -75,9 +76,9 @@ RUN apt update && \
         unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
         cp -af libtorch/* /usr/local/; \
     elif [ -n "${TRT_VERSION}" ]; then \
-        if [ "${TRT_VERSION}" = "7.1.3.4" ]; then \
+        if [ "${TRT_VERSION}" = "7.1.3" ]; then \
             trt_ver="7=7.1.3-1+cuda10.2"; \
-        elif [ "${TRT_VERSION}" = "8.4.2.4" ]; then \
+        elif [ "${TRT_VERSION}" = "8.4.2" ]; then \
             trt_ver="8=8.4.2-1+cuda11.6";fi && \
         apt install -y --no-install-recommends \
             libnvinfer${trt_ver} \
@@ -110,7 +111,7 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     sed -i "32aPermitRootLogin yes" /etc/ssh/sshd_config && \
     echo 'export TMOUT=0' >> /etc/bash.bashrc && \
     echo 'export HISTSIZE=1000' >> /etc/bash.bashrc && \
-    echo '[ -n "${SSH_TTY}" ] && export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
+    echo 'export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
     echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> ~/.bashrc && \
     echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && systemctl enable ssh
 
