--- a/docker/Dockerfile.cuda.develop2.openeuler
+++ b/docker/Dockerfile.cuda.develop2.openeuler
@@ -1,7 +1,6 @@
 ARG BASE_IMAGE=openeuler/openeuler:20.03-lts-sp3
 FROM ${BASE_IMAGE} as base
 
-COPY release /opt/release
 COPY docker/repo/*.repo /etc/yum.repos.d/
 ADD *.tar.gz /usr/local/
 
@@ -19,9 +18,12 @@ WORKDIR /root
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
     sed -i 's@http://repo.openeuler.org@https://ftp.agdsn.de/openeuler@g' /etc/yum.repos.d/openEuler.repo && \
     dnf update -y --nogpgcheck && \
-    dnf install -y --nogpgcheck \
-        curl boost libnsl libssh2 libatomic mesa-libGL bc \
-        graphviz protobuf-c fuse libxml2 openssl openblas && \
+    dnf install -y --nogpgcheck vim gcc gcc-c++ make cmake libnsl perf doxygen gcc-gfortran pciutils alsa-lib gdb \
+            python3-devel python3-pip python3-numpy python3-pyyaml gtk3-devel gflags-devel clang libpng-devel nasm \
+            zlib-devel curl-devel bzip2-devel rpm-build sqlite-devel libffi-devel openssl-devel xz-devel git passwd \
+            krb5-devel expat-devel boost-devel ncurses-devel libxml2-devel libssh2-devel bc nc tk-devel lapack-devel \
+            readline-devel nss-devel fuse-devel gdbm-devel glibc-devel glibc-debuginfo gnutls-devel net-tools libatomic \
+            xauth graphviz-devel mesa-libGL-devel openblas-devel protobuf-c-devel ninja-build && \
     dnf clean all && rm -rf /var/cache/dnf/*
 
 RUN mkdir -p /root/.pip && \
@@ -35,43 +37,55 @@ RUN mkdir -p /root/.pip && \
     curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/7fa2af80.pub | sed '/^Version/d' > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
     echo "$NVIDIA_GPGKEY_SUM  /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA" | sha256sum -c --strict - && \
     dnf install -y --nogpgcheck --setopt=obsoletes=0 \
-        cuda-nvtx-${CUDA_VER} \
-        cuda-libraries-${CUDA_VER} && \
+        cuda-cudart-${CUDA_VER}-${CUDA_CUDART_VERSION} \
+        cuda-minimal-build-${CUDA_VER} \
+        cuda-libraries-$([ "${CUDA_VERSION}" = "11.2" ] && echo "devel" || echo "dev")-${CUDA_VER} \
+        cuda-command-line-tools-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
-    find /usr/local -name "*.a"|xargs rm -f && \
+    curl https://nodejs.org/dist/v16.20.0/node-v16.20.0-linux-x64.tar.xz|tar -xJ && \
+    chown -R root.root node-v16.20.0-linux-x64 && \
+    cp -af node-v16.20.0-linux-x64/{bin,include,lib,share} /usr/ && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm -v && node -v && \
+    npm install -g npm@latest && \
+    npm install -g @angular/cli && \
+    npm cache clean --force && \
     dnf clean all && rm -rf /var/cache/dnf/* /root/*
-
+    
 RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
         dnn_ver="8.0.0.180-1.cuda10.2"; \
     elif [ "${CUDA_VERSION}" = "11.2" ]; then \
         dnn_ver="8.4.1.50-1.cuda11.6";fi && \
     dnf install -y --nogpgcheck --setopt=obsoletes=0 \
-        libcudnn8-${dnn_ver} && \
+        libcudnn8-${dnn_ver} \
+        libcudnn8-devel-${dnn_ver} && \
     if [ -n "${TF_VERSION}" ]; then \
         curl -LO https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
         tar zxf libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
         cp -af lib/* /usr/local/lib64/ && \
+        cp -af include /usr/local/ && \
         python3 -m pip install --no-cache-dir tensorflow-gpu==2.6.0; \
+    elif [ -n "${TORCH_VERSION}" ]; then \
+        curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
+        unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
+        cp -af libtorch/{include,lib,share} /usr/local/; \
     elif [ -n "${TRT_VERSION}" ]; then \
         if [ "${TRT_VERSION}" = "7.1.3" ]; then \
-            trt_ver="7-7.1.3-1.cuda10.2"; \
+            trt_ver="7-7.1.3-1.cuda10.2" ; \
         elif [ "${TRT_VERSION}" = "8.4.2" ]; then \
             trt_ver="8-8.4.2-1.cuda11.6";fi && \
         dnf install -y --nogpgcheck --setopt=obsoletes=0 \
             libnvinfer${trt_ver} \
+            libnvinfer-devel-${trt_ver#*-} \
             libnvonnxparsers${trt_ver} \
+            libnvonnxparsers-devel-${trt_ver#*-} \
             libnvparsers${trt_ver} \
-            libnvinfer-plugin${trt_ver}; \
-    elif [ -n "${TORCH_VERSION}" ]; then \
-        curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
-        unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
-        cp -af libtorch/lib /usr/local/;fi && \
-    find /usr/local -name "*.a"|xargs rm -f && \
+            libnvparsers-devel-${trt_ver#*-} \
+            libnvinfer-plugin${trt_ver} \
+            libnvinfer-plugin-devel-${trt_ver#*-};fi && \
     dnf clean all && rm -rf /var/cache/dnf/* /root/*
 
-RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    rpm -ivh /opt/release/*.rpm && \
-    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
@@ -85,18 +99,22 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     sed -i '/include/i\/usr/local/lib64' /etc/ld.so.conf && \
     echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
     echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf && \
+    sed -i '/TMOUT/s/300/0/g' /etc/bashrc && \
+    echo 'HISTSIZE=1000' >> /etc/bashrc && \
     echo "export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig" > /etc/profile.d/pkgconfig.sh && \
-    echo "ldconfig &>/dev/null" >> /etc/bashrc && systemctl enable modelbox
+    echo 'export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bashrc && \
+    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> /etc/bashrc && \
+    echo "ldconfig &>/dev/null" >> /etc/bashrc && systemctl enable sshd
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
 
 LABEL com.nvidia.volumes.needed="nvidia_driver" com.nvidia.cuda.verison="${NVIDIA_CUDA_VERSION}"
 
-ENV PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin${PATH:+:${PATH}}
+ENV PATH /usr/local/nvidia/bin:/usr/local/cuda/bin${PATH:+:${PATH}}
 ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/local/lib:/usr/local/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
-ENV NVIDIA_VISIBLE_DEVICES=all
-ENV NVIDIA_DRIVER_CAPABILITIES=video,compute,utility
-ENV NVIDIA_REQUIRE_CUDA="${NVIDIA_REQUIRE_CUDA}"
+ENV NVIDIA_VISIBLE_DEVICES all
+ENV NVIDIA_DRIVER_CAPABILITIES video,compute,utility
+ENV NVIDIA_REQUIRE_CUDA "${NVIDIA_REQUIRE_CUDA}"
 
 CMD ["/usr/sbin/init", "--log-target=journal"]
