--- a/docker/Dockerfile.cuda.develop2.ubuntu
+++ b/docker/Dockerfile.cuda.develop2.ubuntu
@@ -1,7 +1,6 @@
 ARG BASE_IMAGE=ubuntu:20.04
 FROM ${BASE_IMAGE} as base
 
-COPY release /opt/release
 ADD *.tar.gz /usr/local/
 
 ARG CUDA_VER
@@ -18,10 +17,13 @@ WORKDIR /root
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
     export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
     apt update && \
-    apt install -y python3.8 python3-pip python3-apt python3-setuptools ca-certificates && \
-    apt install -y vim bash unzip curl pkg-config systemd iproute2 gnupg2 libfuse2 libgtk-3-0 \
-        duktape mosquitto libssl1.1 libcpprest libprotobuf-c1 libopenblas-base libgoogle-glog0v5 \
-        ffmpeg libjpeg8 libpng16-16 libtiff5 libtbb2 && \
+    apt install -y python3.8-dev python3-pip python3-apt python3-setuptools apt-utils build-essential && \
+    apt install -y dbus systemd systemd-cron iproute2 gnupg2 curl libcurl4-openssl-dev ca-certificates \
+        unzip sudo bash vim gdb git doxygen autoconf cmake gettext openssh-server kmod libopencv-dev \
+        pkg-config net-tools pciutils libssl-dev libcpprest-dev netcat mosquitto mosquitto-clients \
+        graphviz libgraphviz-dev libfuse-dev libprotobuf-c-dev protobuf-c-compiler duktape-dev libtbb-dev \
+        ffmpeg libavcodec-dev libswscale-dev libavformat-dev libjpeg-dev libpng-dev libtiff-dev \
+        libopenblas-dev clang clang-tidy libgoogle-glog-dev libgtk-3-dev && \
     update-ca-certificates && apt upgrade -y && \
     ln -sf python3.8 /usr/bin/python3 && \
     rm -rf /var/lib/apt/lists/*
@@ -39,24 +41,39 @@ RUN mkdir -p /root/.pip && \
     echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
     apt update && \
     apt install -y --no-install-recommends \
-        cuda-nvtx-${CUDA_VER} \
-        cuda-libraries-${CUDA_VER} && \
+        cuda-cudart-${CUDA_VER}=${CUDA_CUDART_VERSION} \
+        cuda-minimal-build-${CUDA_VER} \
+        cuda-libraries-dev-${CUDA_VER} \
+        cuda-command-line-tools-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
-    find /usr/local -name "*.a"|xargs rm -f && \
+    curl https://nodejs.org/dist/v16.20.0/node-v16.20.0-linux-x64.tar.xz|tar -xJ && \
+    chown -R root.root node-v16.20.0-linux-x64 && \
+    rm -f node-v16.20.0-linux-x64/LICENSE node-v16.20.0-linux-x64/*.md && \
+    cp -af node-v16.20.0-linux-x64/* /usr/ && \
+    npm config set registry https://registry.npmjs.org/ && \
+    npm -v && node -v && \
+    npm install -g npm@latest && \
+    npm install -g @angular/cli && \
+    npm cache clean --force && \
     rm -rf /var/lib/apt/lists/* /root/*
 
 RUN apt update && \
     if [ "${CUDA_VERSION}" = "10.2" ]; then \
-        dnn_ver="8.0.0.180-1+cuda10.2"; \
+        dnn_ver="8=8.0.0.180-1+cuda10.2"; \
     elif [ "${CUDA_VERSION}" = "11.2" ]; then \
-        dnn_ver="8.4.1.50-1+cuda11.6";fi && \
+        dnn_ver="8=8.4.1.50-1+cuda11.6";fi && \
     apt install -y --no-install-recommends \
-        libcudnn8=${dnn_ver} && \
+        libcudnn${dnn_ver} \
+        libcudnn${dnn_ver%=*}-dev=${dnn_ver#*=} && \
     if [ -n "${TF_VERSION}" ]; then \
         curl -LO https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
         tar zxf libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
-        cp -af lib/* /usr/local/lib/ && \
+        cp -af lib include /usr/local/ && \
         python3 -m pip install --no-cache-dir tensorflow-gpu==2.6.0; \
+    elif [ -n "${TORCH_VERSION}" ]; then \
+        curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
+        unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
+        cp -af libtorch/* /usr/local/; \
     elif [ -n "${TRT_VERSION}" ]; then \
         if [ "${TRT_VERSION}" = "7.1.3" ]; then \
             trt_ver="7=7.1.3-1+cuda10.2"; \
@@ -64,20 +81,18 @@ RUN apt update && \
             trt_ver="8=8.4.2-1+cuda11.6";fi && \
         apt install -y --no-install-recommends \
             libnvinfer${trt_ver} \
-            libnvonnxparsers${trt_ver} \
+            libnvinfer-dev=${trt_ver#*=} \
             libnvparsers${trt_ver} \
+            libnvparsers-dev=${trt_ver#*=} \
+            libnvonnxparsers${trt_ver} \
+            libnvonnxparsers-dev=${trt_ver#*=} \
             libnvinfer-plugin${trt_ver} \
-            python3-libnvinfer=${trt_ver#*=}; \
-    elif [ -n "${TORCH_VERSION}" ]; then \
-        curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
-        unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
-        cp -af libtorch/* /usr/local/;fi && \
-    find /usr/local -name "*.a"|xargs rm -f && \
+            libnvinfer-plugin-dev=${trt_ver#*=} \
+            python3-libnvinfer=${trt_ver#*=} \
+            python3-libnvinfer-dev=${trt_ver#*=};fi && \
     rm -rf /var/lib/apt/lists/* /root/*
 
-RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    dpkg -i /opt/release/*.deb && \
-    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
@@ -86,11 +101,16 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
+    sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
     sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf && \
     echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
     echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf && \
-    sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && systemctl enable modelbox
+    sed -i "32aPermitRootLogin yes" /etc/ssh/sshd_config && \
+    echo 'export TMOUT=0' >> /etc/bash.bashrc && \
+    echo 'export HISTSIZE=1000' >> /etc/bash.bashrc && \
+    echo 'export $(cat /proc/1/environ|tr "\\0" "\\n"|xargs)' >> /etc/bash.bashrc && \
+    echo 'export PS1="\[\e[35;1m\][\u@\h \W]$ \[\e[0m\]"' >> ~/.bashrc && \
+    echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && systemctl enable ssh
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
