--- a/docker/Dockerfile.cuda.runtime2.openeuler
+++ b/docker/Dockerfile.cuda.runtime2.openeuler
@@ -1,7 +1,7 @@
-ARG BASE_IMAGE=ubuntu:20.04
+ARG BASE_IMAGE=openeuler/openeuler:20.03-lts-sp3
 FROM ${BASE_IMAGE} as base
 
-COPY release /opt/release
+COPY docker/repo/*.repo /etc/yum.repos.d/
 ADD *.tar.gz /usr/local/
 
 ARG CUDA_VER
@@ -16,15 +16,12 @@ ARG NVIDIA_REQUIRE_CUDA
 WORKDIR /root
 
 RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo "Asia/Shanghai" > /etc/timezone && \
-    export DEBIAN_FRONTEND=noninteractive DEBIAN_PRIORITY=low TZ=Asia/Shanghai && \
-    apt update && \
-    apt install -y python3.8 python3-pip python3-apt python3-setuptools ca-certificates && \
-    apt install -y vim bash unzip curl pkg-config systemd iproute2 gnupg2 libfuse2 libgtk-3-0 \
-        duktape mosquitto libssl1.1 libcpprest libprotobuf-c1 libopenblas-base libgoogle-glog0v5 \
-        ffmpeg libjpeg8 libpng16-16 libtiff5 libtbb2 && \
-    update-ca-certificates && apt upgrade -y && \
-    ln -sf python3.8 /usr/bin/python3 && \
-    rm -rf /var/lib/apt/lists/*
+    sed -i 's@http://repo.openeuler.org@https://ftp.agdsn.de/openeuler@g' /etc/yum.repos.d/openEuler.repo && \
+    dnf update -y --nogpgcheck && \
+    dnf install -y --nogpgcheck \
+        curl boost libnsl libssh2 libatomic mesa-libGL bc \
+        graphviz protobuf-c fuse libxml2 openssl openblas && \
+    dnf clean all && rm -rf /var/cache/dnf/*
 
 RUN mkdir -p /root/.pip && \
     echo "[global]" > /root/.pip/pip.conf && \
@@ -33,51 +30,45 @@ RUN mkdir -p /root/.pip && \
     echo "timeout = 120" >>/root/.pip/pip.conf && \
     python3 -m pip install --no-cache-dir --ignore-installed --upgrade pip setuptools && \
     python3 -m pip install --no-cache-dir psutil pillow wheel numpy pyyaml requests opencv-python==4.5.5.64 && \
-    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/3bf863cc.pub | apt-key add - && \
-    curl -fsSL https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64/7fa2af80.pub | apt-key add - && \
-    echo "deb https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/cuda.list && \
-    echo "deb https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64 /" > /etc/apt/sources.list.d/nvidia-ml.list && \
-    apt update && \
-    apt install -y --no-install-recommends \
+    NVIDIA_GPGKEY_SUM=d1be581509378368edeec8c1eb2958702feedf3bc3d17011adbf24efacce4ab5 && \
+    curl -fsSL https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/7fa2af80.pub | sed '/^Version/d' > /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA && \
+    echo "$NVIDIA_GPGKEY_SUM  /etc/pki/rpm-gpg/RPM-GPG-KEY-NVIDIA" | sha256sum -c --strict - && \
+    dnf install -y --nogpgcheck --setopt=obsoletes=0 \
         cuda-nvtx-${CUDA_VER} \
         cuda-libraries-${CUDA_VER} && \
     ln -s cuda-${CUDA_VERSION} /usr/local/cuda && \
     find /usr/local -name "*.a"|xargs rm -f && \
-    rm -rf /var/lib/apt/lists/* /root/*
+    dnf clean all && rm -rf /var/cache/dnf/* /root/*
 
-RUN apt update && \
-    if [ "${CUDA_VERSION}" = "10.2" ]; then \
-        dnn_ver="8.0.0.180-1+cuda10.2"; \
+RUN if [ "${CUDA_VERSION}" = "10.2" ]; then \
+        dnn_ver="8.0.0.180-1.cuda10.2"; \
     elif [ "${CUDA_VERSION}" = "11.2" ]; then \
-        dnn_ver="8.4.1.50-1+cuda11.6";fi && \
-    apt install -y --no-install-recommends \
-        libcudnn8=${dnn_ver} && \
+        dnn_ver="8.4.1.50-1.cuda11.6";fi && \
+    dnf install -y --nogpgcheck --setopt=obsoletes=0 \
+        libcudnn8-${dnn_ver} && \
     if [ -n "${TF_VERSION}" ]; then \
         curl -LO https://storage.googleapis.com/tensorflow/libtensorflow/libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
         tar zxf libtensorflow-gpu-linux-x86_64-2.6.0.tar.gz && \
-        cp -af lib/* /usr/local/lib/ && \
+        cp -af lib/* /usr/local/lib64/ && \
         python3 -m pip install --no-cache-dir tensorflow-gpu==2.6.0; \
     elif [ -n "${TRT_VERSION}" ]; then \
         if [ "${TRT_VERSION}" = "7.1.3" ]; then \
-            trt_ver="7=7.1.3-1+cuda10.2"; \
+            trt_ver="7-7.1.3-1.cuda10.2"; \
         elif [ "${TRT_VERSION}" = "8.4.2" ]; then \
-            trt_ver="8=8.4.2-1+cuda11.6";fi && \
-        apt install -y --no-install-recommends \
+            trt_ver="8-8.4.2-1.cuda11.6";fi && \
+        dnf install -y --nogpgcheck --setopt=obsoletes=0 \
             libnvinfer${trt_ver} \
             libnvonnxparsers${trt_ver} \
             libnvparsers${trt_ver} \
-            libnvinfer-plugin${trt_ver} \
-            python3-libnvinfer=${trt_ver#*=}; \
+            libnvinfer-plugin${trt_ver}; \
     elif [ -n "${TORCH_VERSION}" ]; then \
         curl -LO https://download.pytorch.org/libtorch/cu102/libtorch-cxx11-abi-shared-with-deps-1.9.1%2Bcu102.zip && \
         unzip libtorch-*.zip -d /root >/dev/null 2>&1 && \
-        cp -af libtorch/* /usr/local/;fi && \
+        cp -af libtorch/lib /usr/local/;fi && \
     find /usr/local -name "*.a"|xargs rm -f && \
-    rm -rf /var/lib/apt/lists/* /root/*
+    dnf clean all && rm -rf /var/cache/dnf/* /root/*
 
-RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && \
-    dpkg -i /opt/release/*.deb && \
-    (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in *; \
     do [ $i = systemd-tmpfiles-setup.service ] || rm -f $i; done); \
     rm -f /lib/systemd/system/multi-user.target.wants/*; \
     rm -f /etc/systemd/system/*.wants/*; \
@@ -86,11 +77,13 @@ RUN python3 -m pip install --no-cache-dir /opt/release/python/modelbox-*.whl && 
     rm -f /lib/systemd/system/sockets.target.wants/*initctl*; \
     rm -f /lib/systemd/system/basic.target.wants/*; \
     rm -f /lib/systemd/system/anaconda.target.wants/*; \
+    sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
     sed -i '/include/i\/usr/local/lib' /etc/ld.so.conf && \
+    sed -i '/include/i\/usr/local/lib64' /etc/ld.so.conf && \
     echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
     echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf && \
-    sed -i 's/^SystemMaxUse=.*/SystemMaxUse=16M/g' /etc/systemd/journald.conf && \
-    echo "ldconfig &>/dev/null" >> /etc/bash.bashrc && systemctl enable modelbox
+    echo "export PKG_CONFIG_PATH=/usr/local/lib64/pkgconfig" > /etc/profile.d/pkgconfig.sh && \
+    echo "ldconfig &>/dev/null" >> /etc/bashrc
 
 VOLUME ["/sys/fs/cgroup", "/tmp", "/run", "/run/lock"]
 STOPSIGNAL SIGRTMIN+3
@@ -98,9 +91,9 @@ STOPSIGNAL SIGRTMIN+3
 LABEL com.nvidia.volumes.needed="nvidia_driver" com.nvidia.cuda.verison="${NVIDIA_CUDA_VERSION}"
 
 ENV PATH=/usr/local/nvidia/bin:/usr/local/cuda/bin${PATH:+:${PATH}}
-ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/local/lib${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
+ENV LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/local/lib:/usr/local/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
 ENV NVIDIA_VISIBLE_DEVICES=all
 ENV NVIDIA_DRIVER_CAPABILITIES=video,compute,utility
 ENV NVIDIA_REQUIRE_CUDA="${NVIDIA_REQUIRE_CUDA}"
 
-CMD ["/sbin/init", "--log-target=journal"]
+CMD ["/usr/sbin/init", "--log-target=journal"]
